--- a/caffemodel_load/caffemodel_load.ipynb
+++ b/caffemodel_load/caffemodel_load.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ad2fa0b524d07d69c48c609266707653a41bf0e9186a36af7a9e16f703248543"
+  "signature": "sha256:307565fbe538da4e15aeb2b42598ffeccb72b9e7e36694e153c9e4cedbc29580"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,12 +12,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import caffe"
+      "import caffe\n",
+      "import numpy as np\n",
+      "import matplotlib.pyplot as plt\n",
+      "%matplotlib inline"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -30,33 +33,62 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "layer_analyse = [\"Mconv7_stage6_L1\",\n",
-      "\"Mconv7_stage6_L2\"]\n",
+      "def show_para(data,):\n",
+      "    data = (data-data.min())/(data.max()-data.min())\n",
+      "    n = int(np.ceil(np.sqrt(data.shape[0])))\n",
+      "    padding = (((0, n**2-data.shape[0]),(0,1),(0,1))+((0,0),)*(data.ndim-3))\n",
+      "    data = np.pad(data,padding, mode='constant', constant_values=1)\n",
+      "    data = data.reshape((n,n)+data.shape[1:]).transpose((0,2,1,3)+tuple(range(4,data.ndim+1)))\n",
+      "    data = data.reshape((n*data.shape[1], n*data.shape[3]) + data.shape[4:])\n",
+      "    plt.imshow(data)\n",
+      "    plt.axis('off')\n",
+      "    plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "layer_analyse = [\"conv4_2\"]\n",
       "threshold = 0.01\n",
       "for i, layer in enumerate(net.params):\n",
+      "    #print layer\n",
       "    if layer not in layer_analyse:\n",
       "        continue\n",
+      "    data = net.params[layer][0].data\n",
+      "    show_para(data)\n",
       "    print net.params[layer][0].data.shape"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAEAAAAD8CAYAAADHYaLQAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvIxREBQAABUNJREFUeJztnctu22YQhUmKlkSRsqyrrTi2kiBx\nF0W7KPpqfYFu+l7ttuiugROg9SWxDce6S9SFEsmu+gRHwODgcB7gw/iDTP6XmaGb57mjHJ51AtZR\nCLBOwDoKAdYJWEchwDoB6ygEWCdgHcwC8t9++RVexjILcJYHYFAL2J2PYQa1gHD/GmZQC5hPvsIM\nagFuHMEMagFJP4YZ1AKa0xBmUAuYrtcwg1pA2HoDM6gFRLN/YQa1gJu4AjOoBZzjfz+3gCT4BjOo\nBeTOKcygFnB8AAa1gHRRhRnUAmbZHmZQC6hciq8Et8M6zKAWUC6XYQa1gKe1DzOoBZz2MphBLeB4\nNIcZ1ALSZglmUAuYr8TXAcee+FtgNhd/CAZ18V/AotmFGdQCotEjzKAW4CUTnHGAPMwiDtowg1qA\nuxPfDu988ZWgt3dxxgHyMItySXwhlB41YQa1gG7rGWZQC3DvxStEFv4CZlALyLfim6FVkMIMagHR\nK/x2kFpA+CC+G5xsxN8CroenTy0gi8XrBJ2O+DpgOhC/F2h8rMEMagHlyRRmUAvwPohXia0m4nuB\n0tEtzKAWsKyJ7wUiV7xOMBmKV4hUffG9wCQOYAa1AD/cwAxqASn+COAW0GxsYQa1gO3uAmZQC2iF\n4i0z2XQFM6gFPHcHMINaQKOjfiJ0J949vhiJd45mA/GV4NARvxzt7sVrhBaZ+BSZXiI+RSbMejCD\nWsBLID5JKhslMINaQPOyBTOoBTzevsAMagFuTfwXkDZwBrWAbS5+Jtjy8JmS1AKSW/HXYONS/GZo\n7ot3jeXxCGZwC9iLj9DIM/FKUe9IvHEy3osfinYi8c7R9Vi8RGZ7IX4q/Goofjvs+eLD1O5W4gUS\njfBHmEEtIM7EZ4i8jsQPRLx5H2ccIA+zSCLxEpntRrxE5sv34q2z7d//hhnUArzWGc44QB5mMVyL\nH4sfl69gBrWAt1d3MINawKc/xLfD+474QzCqiz8ET6viAuK++Jmg81F8nmDHgT85yi3gxRM/FJ26\nO5hBLaC8eYIZ1ALOduJHYvcV8Y6R9gleKUkt4HEhfizeb4nXCs8+D2EGtYBqTXyW2NGJ+GDlPBdf\nCntr8auxIBTvF/AfxF+D4wvxcvng6QFmUAuIm+IDFNKNeK1w5fQcZlALWDyLzxPMfPFTYfm+wW3n\nHcygFlD68glmUAuIa+IfXKz0xcvkrm/Fvy/wbnkNM6gFZK2fYAa1gKYjvh1eTdS3w23xDyz0NuK/\ngDAQrxIbxuI3Q0NH/Cszb2biLTPrxnuYQS2g3xA/ELkriU+UTMfiu8EafirOLWCH906TC4jF1wGr\ntAMzqAU0euKjtL5riw9T+3yLM6gFJN1LmEEtoBeJ3w53l+K3wzepeNtcrSbeL5DOZzCDWkA8En8I\nltQLJetT8YmSZwvxYunrqx9gBrWA0kp8hoh7L341lrj3MINawEskvhv0Y/GV4Lp2AjOoBQSu+HD1\nSkm8YcJZiLfMtLfiByI/d8WHqPyZN2EGtYB9RfxIbDK/gRnUAqpxGWZQCwgG4j1DtUx8IVRf/wMz\nqAWMfPF/gfNL8REaf32TH6IiXis8SMWnyY1H4q/B41D8cnSdiDdNJfuvMINaQDkT/+ps1hQ/EguW\n4tfjiTeGGdQCch9vmnLzHC82NIr/E4dGzFP/Ag4RhQDrBKyjEGCdgHUUAqwTsA55AXjfmV3g39hx\nil9AIaAQYJ2AdRQCrBOwjkKAdQLWUQiwTsA6CgHWCVhHIcA6AesoBFgnYB2FAOsErKMQYJ2AdRQC\nrBOwDnkB/wFNFUd4IRCYEQAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<Figure size 600x400 with 1 Axes>"
+       ]
+      },
+      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "(38, 128, 1, 1)\n",
-        "(19, 128, 1, 1)\n"
+        "(512, 512, 3, 3)\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
